# Copperline

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  THREADING_PLAN.md  TODO.md  a1000.example.toml  copperline.example.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: appimage.yml  ci.yml  flatpak.yml  linux-present.yml
Formula/: copperline.rb
assets/aros/: README.md
assets/brand/: copperline.icns
crates/m68k/: CYCLE_TIMING_GAP.md  Cargo.toml  README.md  VENDOR.md
crates/m68k/src/core/: addressing.rs  cpu.rs  decode.rs  execute.rs  interrupts.rs  status.rs  timing.rs  types.rs
crates/m68k/src/core/instructions/: bitfield.rs  callm.rs  data_movement.rs  move16.rs  moves.rs  mul_div.rs
crates/m68k/src/dasm/: format.rs  mod.rs
crates/m68k/src/fpu/: packed.rs  softfloat.rs  types.rs
crates/m68k/src/mmu/: ttr.rs
crates/m68k/tests/: coverage_tests.rs  exception_tests.rs  fpu_accuracy.rs  fpu_memory_source_tests.rs  gap_tests.rs  hle_interception_tests.rs  illegal_bitfield_tests.rs  illegal_cas_tests.rs  illegal_linkl_tests.rs  illegal_move16_tests.rs  illegal_movec_reg_68020_tests.rs  illegal_movec_tests.rs  illegal_moves_tests.rs  illegal_mull_tests.rs  m68010_tests.rs  m68020_tests.rs  musashi_tests.rs  privileged_pmmu_tests.rs  scc68070_tests.rs  singlestep_m68000_v1_tests.rs  test_pmove_tt_registers.rs  unaligned_fetch_hle_tests.rs  unaligned_fetch_tests.rs
crates/m68k/tests/common/: test_device.rs
crates/m68k/tests/fixtures/extra/: Dockerfile.m68k  Makefile  build_fixtures.sh
crates/m68k/tests/fixtures/extra/coverage/src/: asl_asr.s  bchg_btst.s  bit_edge_cases.s  bit_memory_ea.s  dbcc_all.s  lsl_lsr.s  movem_patterns.s  movem_stack.s  mulu_edge.s  rol_ror.s  scc_all.s  shift_memory.s  trapcc.s
crates/m68k/tests/fixtures/extra/exceptions/src/: double_exception.s  exception_priority.s  interrupt_nesting.s  rte_validation.s  spurious_interrupt.s
crates/m68k/tests/fixtures/extra/m68010/src/: loop_mode.s  rte_010.s
crates/m68k/tests/fixtures/extra/m68020/src/: bitfield_ops.s  boundary_edge.s  cas.s  chk2_cmp2.s  ec020_mmu_trap.s  ec030_fpu.s  ec030_mmu_trap.s  long_muldiv.s
crates/m68k/tests/fixtures/extra/m68030/src/: mmu_030_tc.s  move16_030.s
crates/m68k/tests/fixtures/extra/m68040/src/: address_stress.s  arch_fpu_trap.s  bus_error.s  callm_rtm.s  dasm_arithmetic.s  dasm_data_move.s  dasm_logical.s  dasm_shift.s  ec040_mmu_trap.s  exception_frame_format.s  extb.s  fpu_arith.s  fpu_constants.s  fpu_remainder.s  fpu_sincos.s  fpu_transcendental.s  interrupts.s  mmu_atc.s  mmu_permissions.s  mmu_ttr.s  mmu_ttr_config.s  movec.s  multiprec.s  pack.s  pc_indirect.s  rtd.s  scale_index.s  tas.s  trapcc.s
crates/m68k/tests/fixtures/extra/privilege/src/: exception_privilege.s  move_usp.s  privilege_boundary.s  trap_privilege.s  user_movec.s  user_rte.s  user_stop.s
crates/m68k/tests/fixtures/verify/: Dockerfile.musashi  musashi_verify.c  verify_fixtures.sh
docs/: README.md  index.md  myst.yml  zorro.md
docs/debugger/: gdb.md  headless.md  reverse.md  window.md
docs/guide/: configuration.md  getting-started.md  headless.md  ui.md
docs/internals/: architecture.md  chipset.md  cpu.md  peripherals.md  reference-docs.md  savestate.md  timing.md  video.md
packaging/appimage/: build-appimage.sh
packaging/flatpak/: README.md  cargo-sources.json  dev.copperline.Copperline.desktop  dev.copperline.Copperline.metainfo.xml  dev.copperline.Copperline.yaml  generate-cargo-sources.sh
packaging/test-linux-vulkan/: Dockerfile  run-smoke.sh  run.sh
src/: a2065.rs  a2091.rs  akiko.rs  audio.rs  bus.rs  cache.rs  cdrom.rs  cdtv.rs  config.rs  cpu.rs  debugger.rs  dirfs.rs  disasm.rs  dms.rs  drive_sounds.rs  emulator.rs  envcfg.rs  floppy.rs  gamepad.rs  gayle.rs  gdbstub.rs  harddrive.rs  inputrec.rs  main.rs  memory.rs  net.rs  priority.rs  recorder.rs  romsearch.rs  rtc.rs  savestate.rs  screenshot.rs  scsi.rs  serial.rs  timestamp.rs  wasmboard.rs  zorro.rs  zorro_device.rs
src/chipset/: agnus.rs  blitter.rs  cia.rs  copper.rs  denise.rs  keyboard.rs  mod.rs  paula.rs
src/video/: beam.rs  bitplane.rs  deinterlace.rs  font.rs  launcher.rs  mod.rs  ui.rs  window.rs
tests/: README.md  image_regression.rs  vamiga_ts.rs
timing-test/: README.md  boot.asm  build.sh  make_adf.py  test.asm  timing-test.fs-uae  timing-test.toml
