# Copperline's fork of the m68k core. Deliberately NOT named "m68k": that name
# belongs to the upstream crates.io crate (benletchford/m68k-rs), and this fork
# has diverged substantially (cycle-exact MC68000 timing, 2-word prefetch queue,
# 80-bit extended FPU; see VENDOR.md). The distinct package name makes it
# impossible for any tool, [patch], or future workspace member to substitute the
# upstream crate -- there is no crates.io crate by this name. The root crate
# imports it aliased back to `m68k` via `package = "copperline-m68k"`, so source
# code keeps using `m68k::...`. Still MIT-licensed (Ben Letchford); see LICENSE.
[package]
name = "copperline-m68k"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "Copperline's fork of the m68k MC68000-family CPU emulator"
exclude = ["tests/**/*"]

# Keep the importable library name `m68k` even though the package is renamed to
# copperline-m68k. This lets the fork's own integration tests and the dasm
# binary keep `use m68k::...` unchanged; only the crates.io-visible package name
# differs (which is what blocks upstream substitution).
[lib]
name = "m68k"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
# Arbitrary-precision float oracle for the FPU transcendental accuracy tests
# (tests/fpu_accuracy.rs). Pure Rust; dev-only, never in the shipped emulator.
astro-float = { version = "0.9", default-features = false, features = ["std"] }
